# sentinel

./: .gitignore  AGENT.md  ARCHITECTURE.md  DEMO.md  Package.swift  README.md  build.sh  cron.toml  pyproject.toml
.claude/: ralph-loop.local.md
daemon/: README.md  com.sentinel.daemon.plist  install.sh  sentinel-wrapper.sh  uninstall.sh
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
extension-firefox/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
macos/: build.sh
policies/: adult_domain_guard.py
sentinel/: accessibility_helper.py  achievements.py  agent.py  ai_personas.py  ai_store.py  alerts.py  ambient.py  anomaly_detection.py  applescript.py  audit.py  backup.py  battery.py  blocker.py  blocklist_marketplace.py  book_notes.py  browser_history.py  buddy.py  budget.py  burnout.py  cache.py  calendar.py  calendar_heatmap.py  calendar_integrations.py  carbon_footprint.py  challenges.py  chat_history.py  checkins.py  classifier.py  cli.py  client.py  clipboard.py  clustering.py  coach.py  code_stats.py  commitments.py  content_filter.py  context.py  cookie_jar.py  correlations.py  cron.py  (+174 more)
tests/: conftest.py  test_accessibility_helper.py  test_achievements.py  test_agent.py  test_ai_personas.py  test_ai_store.py  test_alerts.py  test_ambient.py  test_anomaly_detection.py  test_applescript.py  test_audit.py  test_backup.py  test_battery.py  test_blocker.py  test_blocklist_marketplace.py  test_book_notes.py  test_browser_history.py  test_buddy.py  test_budget.py  test_burnout.py  test_cache.py  (+195 more)
(+25 files in other folders)
